feat(index): change description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Hi it's me Victor"
+      content="Web site about me !"
     />
     <link rel="shortcut icon" href="https://user-images.githubusercontent.com/57908921/82508726-43556380-9b06-11ea-845d-57986d1bff05.jpeg" type="image/x-icon">    <!--
       manifest.json provides metadata used when your web app is installed on a
